# dawn3dviewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: FileLoader.h  FileLoader.hpp  file_loader.hpp  scene.hpp
include/components/: mesh.hpp  transform.hpp
include/core/: renderer.hpp  window.hpp
include/resources/: mesh_loader.hpp
res/: webgpu.txt
src/: main.cpp  scene.cpp
src/components/: mesh.cpp
src/core/: renderer.cpp  window.cpp
